src/objects/Job_Description__c.object
<CustomObject>
    <fields>
        <fullName>Division_3__c</fullName>
        <label>Division3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Descriptions</relationshipLabel>
        <relationshipName>Job_Descriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Permanent - F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent - P/T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <picklist>
            <picklistValues>
                <fullName>   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programme Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <picklist>
            <picklistValues>
                <fullName>   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIC &amp; Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkage/</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Pattern__c</fullName>
        <label>Work Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>Monday To Friday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Description</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Service_Name__c</columns>
        <columns>Employment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JD-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Descriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>